[gd_scene load_steps=14 format=4 uid="uid://c8eltogebh0sg"]

[ext_resource type="Texture2D" uid="uid://b8kec85egdvl8" path="res://Assets/Towers/ArcherTower/1 Upgrade/1.png" id="1_pe77v"]
[ext_resource type="Script" path="res://Scene/Tower/base_tower.gd" id="1_xnxwq"]
[ext_resource type="Texture2D" uid="uid://daepn7whdwp0t" path="res://Assets/UI/1 Frames/Portrait_frame.png" id="2_cj4qs"]
[ext_resource type="FontFile" uid="uid://cantxaynqf5fn" path="res://Assets/Font/TinyFontCraftpixPixel.otf" id="3_ulfj4"]
[ext_resource type="Texture2D" uid="uid://dib7kk52xveeg" path="res://Assets/UI/1 Frames/Tileset.png" id="4_jedix"]
[ext_resource type="Texture2D" uid="uid://bhtodn2wiq3dc" path="res://Assets/UI/Used Icons/archer_icon.png" id="5_6rtso"]
[ext_resource type="Texture2D" uid="uid://b432thm2tenew" path="res://Assets/UI/Used Icons/magic_icon.png" id="6_p7jvn"]
[ext_resource type="Texture2D" uid="uid://cg4p1223hjako" path="res://Assets/UI/Used Icons/catapult_icon.png" id="7_5q4gb"]
[ext_resource type="Texture2D" uid="uid://bqrn5upssqngj" path="res://Assets/Sprite-0002.png" id="7_fbjko"]
[ext_resource type="Texture2D" uid="uid://dej0xobfq4b8q" path="res://Assets/UI/Used Icons/guardian_icon.png" id="8_gi85h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bh4vw"]
radius = 40.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t3evc"]
texture = ExtResource("4_jedix")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0

[sub_resource type="TileSet" id="TileSet_do3ld"]
tile_size = Vector2i(32, 32)
sources/1 = SubResource("TileSetAtlasSource_t3evc")

[node name="BaseTower" type="Area2D"]
position = Vector2(-1, -6)
scale = Vector2(1.5, 1.5)
collision_layer = 20
collision_mask = 2
script = ExtResource("1_xnxwq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
z_as_relative = false
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_bh4vw")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("1_pe77v")
offset = Vector2(0, -30)
hframes = 4

[node name="TowerOptions" type="Control" parent="."]
visible = false
z_index = 4096
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 35.3333
offset_top = -16.6667
offset_right = 35.3333
offset_bottom = -16.6667
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="Panel" parent="TowerOptions"]
layout_mode = 0
offset_left = -125.0
offset_top = -66.0
offset_right = 51.0
offset_bottom = 110.0

[node name="ErrorMessage" type="Label" parent="TowerOptions/Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -15.5
offset_right = 70.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_fonts/font = ExtResource("3_ulfj4")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="ArcherPanel" type="Panel" parent="TowerOptions/Container"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.101
anchor_top = 0.096
anchor_right = 0.351
anchor_bottom = 0.346
offset_left = 15.224
offset_top = 13.104
offset_right = 4.21597
offset_bottom = 2.09603
scale = Vector2(0.8, 0.8)
mouse_filter = 2

[node name="ArcherButton" type="Button" parent="TowerOptions/Container/ArcherPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="TowerOptions/Container/ArcherPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_cj4qs")
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="TowerOptions/Container/ArcherPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.27227
offset_top = 5.45454
offset_right = -5.72778
offset_bottom = -7.54539
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_6rtso")
expand_mode = 1

[node name="CostLabel" type="Label" parent="TowerOptions/Container/ArcherPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "100$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MagicPanel" type="Panel" parent="TowerOptions/Container"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.632
anchor_top = 0.096
anchor_right = 0.867
anchor_bottom = 0.351
offset_left = 8.43468
offset_top = 13.104
offset_right = 2.06667
offset_bottom = 3.21603
scale = Vector2(0.8, 0.8)
mouse_filter = 2

[node name="MagicButton" type="Button" parent="TowerOptions/Container/MagicPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="TowerOptions/Container/MagicPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_cj4qs")
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="TowerOptions/Container/MagicPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.27227
offset_top = 5.45454
offset_right = -5.72778
offset_bottom = -7.54539
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_p7jvn")
expand_mode = 1

[node name="CostLabel" type="Label" parent="TowerOptions/Container/MagicPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "150$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect3" type="TextureRect" parent="TowerOptions/Container/MagicPanel"]
layout_mode = 0
offset_right = 33.0
offset_bottom = 33.0
mouse_filter = 2
texture = ExtResource("7_fbjko")

[node name="CatapultPanel" type="Panel" parent="TowerOptions/Container"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.096
anchor_top = 0.628
anchor_right = 0.337
anchor_bottom = 0.877
offset_left = 14.7707
offset_top = 7.47203
offset_right = 6.50669
offset_bottom = -2.46397
scale = Vector2(0.8, 0.8)
mouse_filter = 2

[node name="CatapultButton" type="Button" parent="TowerOptions/Container/CatapultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="TowerOptions/Container/CatapultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_cj4qs")
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="TowerOptions/Container/CatapultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.45449
offset_top = 5.45508
offset_right = -5.54556
offset_bottom = -5.54485
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("7_5q4gb")
expand_mode = 1

[node name="CostLabel" type="Label" parent="TowerOptions/Container/CatapultPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "200$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GuardianPanel" type="Panel" parent="TowerOptions/Container"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.025
anchor_top = 0.225
anchor_right = 0.867
anchor_bottom = 0.875
offset_left = 124.067
offset_top = 78.4003
offset_right = 2.06668
offset_bottom = -1.00771
scale = Vector2(0.8, 0.8)
mouse_filter = 2

[node name="GuardianButton" type="Button" parent="TowerOptions/Container/GuardianPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="TowerOptions/Container/GuardianPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_cj4qs")
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="TowerOptions/Container/GuardianPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.27227
offset_top = 6.36328
offset_right = -5.72777
offset_bottom = -6.63666
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("8_gi85h")
expand_mode = 1

[node name="CostLabel" type="Label" parent="TowerOptions/Container/GuardianPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "250$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect4" type="TextureRect" parent="TowerOptions/Container/GuardianPanel"]
layout_mode = 0
offset_left = -0.00038147
offset_top = -0.000331879
offset_right = 32.9996
offset_bottom = 32.9997
mouse_filter = 2
texture = ExtResource("7_fbjko")

[node name="TileMap" type="TileMapLayer" parent="TowerOptions"]
position = Vector2(-59.9999, 29.3334)
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray("AAD8/wQAAQAEAAEAAAD8/wMAAQAGAAEAAAD8/wIAAQAGAAEAAAD8/wEAAQAGAAEAAAD8/wAAAQAGAAEAAAD8////AQAGAAEAAAD8//7/AQAGAAEAAAD8//3/AQAGAAEAAAD8//z/AQAGAAEAAAD8//v/AQAGAAEAAAD8//r/AQAEAAAAAAD9//r/AQAGAAAAAAD+//r/AQAGAAAAAAD///r/AQAGAAAAAAAAAPr/AQAGAAAAAAABAPr/AQAGAAAAAAACAPr/AQAGAAAAAAADAPr/AQAGAAAAAAAEAPr/AQAGAAAAAAAFAPr/AQAGAAAAAAAGAPr/AQAFAAAAAAAGAPv/AQAHAAAAAAAGAPz/AQAHAAAAAAAGAP3/AQAHAAAAAAAGAP7/AQAHAAAAAAAGAP//AQAHAAAAAAAGAAAAAQAHAAAAAAAGAAEAAQAHAAAAAAAGAAIAAQAHAAAAAAAGAAMAAQAHAAAAAAAGAAQAAQAFAAEAAAAFAAQAAQAHAAAAAFAEAAQAAQAHAAAAAFADAAQAAQAHAAAAAFACAAQAAQAHAAAAAFABAAQAAQAHAAAAAFAAAAQAAQAHAAAAAFD//wQAAQAHAAAAAFD+/wQAAQAHAAAAAFD9/wQAAQAHAAAAAFA=")
tile_set = SubResource("TileSet_do3ld")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TowerOptions/Container" to="." method="_on_container_mouse_exited"]
[connection signal="mouse_entered" from="TowerOptions/Container/ArcherPanel/ArcherButton" to="." method="_on_archer_button_mouse_entered"]
[connection signal="mouse_exited" from="TowerOptions/Container/ArcherPanel/ArcherButton" to="." method="_on_tower_button_mouse_exited"]
[connection signal="pressed" from="TowerOptions/Container/ArcherPanel/ArcherButton" to="." method="_on_archer_button_pressed"]
[connection signal="mouse_entered" from="TowerOptions/Container/MagicPanel/MagicButton" to="." method="_on_magic_button_mouse_entered"]
[connection signal="mouse_exited" from="TowerOptions/Container/MagicPanel/MagicButton" to="." method="_on_tower_button_mouse_exited"]
[connection signal="pressed" from="TowerOptions/Container/MagicPanel/MagicButton" to="." method="_on_magic_button_pressed"]
[connection signal="mouse_entered" from="TowerOptions/Container/CatapultPanel/CatapultButton" to="." method="_on_catapult_button_mouse_entered"]
[connection signal="mouse_exited" from="TowerOptions/Container/CatapultPanel/CatapultButton" to="." method="_on_tower_button_mouse_exited"]
[connection signal="pressed" from="TowerOptions/Container/CatapultPanel/CatapultButton" to="." method="_on_catapult_button_pressed"]
[connection signal="mouse_entered" from="TowerOptions/Container/GuardianPanel/GuardianButton" to="." method="_on_guardian_button_mouse_entered"]
[connection signal="mouse_exited" from="TowerOptions/Container/GuardianPanel/GuardianButton" to="." method="_on_tower_button_mouse_exited"]
[connection signal="pressed" from="TowerOptions/Container/GuardianPanel/GuardianButton" to="." method="_on_guardian_button_pressed"]
